Refatoração dos webservices e migração do servicos do netbeans para eclipse.

--- a/desenvolvimento/webservices/eclipse+tomcat/src/main/webapp/WEB-INF/web.xml
+++ b/desenvolvimento/webservices/eclipse+tomcat/src/main/webapp/WEB-INF/web.xml
@@ -45,7 +45,7 @@
 		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>com.sun.jersey.config.property.packages</param-name>
-			<param-value>br.com.turismo.webservices.restful</param-value>
+			<param-value>br.com.turismo.webservices</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
