--- a/desenvolvimento/webservices/eclipse+tomcat/pom.xml
+++ b/desenvolvimento/webservices/eclipse+tomcat/pom.xml
@@ -135,11 +135,17 @@
 		</dependency>
 		 -->
 		 
+<!-- 		<dependency> -->
+<!-- 			<groupId>mysql</groupId> -->
+<!-- 			<artifactId>mysql-connector-java</artifactId> -->
+<!-- 			<version>${mysql.connector.java.version}</version> -->
+<!-- 			<scope>${api.scope.compile}</scope> -->
+<!-- 		</dependency> -->
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>${mysql.connector.java.version}</version>
-			<scope>${api.scope.compile}</scope>
+			<version>5.1.38</version>
 		</dependency>
 		
 		<dependency>
@@ -166,6 +172,12 @@
 			<artifactId>jersey-client</artifactId>
 			<version>${jersey.version}</version>
 			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
 		</dependency>
 
 	</dependencies>
