--- a/desenvolvimento/hibrido/package.json
+++ b/desenvolvimento/hibrido/package.json
@@ -7,19 +7,19 @@
     "url": "https://github.com/projeto-tour/app"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/http": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/router": "2.0.0-rc.1",
-    "es6-shim": "0.35.1",
-    "ionic-angular": "^2.0.0-beta.8",
+    "@angular/common": "^2.0.0-rc.3",
+    "@angular/compiler": "^2.0.0-rc.3",
+    "@angular/core": "^2.0.0-rc.3",
+    "@angular/http": "^2.0.0-rc.3",
+    "@angular/platform-browser": "^2.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.3",
+    "@angular/router": "^2.0.0-rc.2",
+    "es6-shim": "0.35.0",
+    "ionic-angular": "^2.0.0-beta.10",
     "ionic-native": "^1.1.0",
     "ionicons": "3.0.0",
     "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.8",
+    "rxjs": "5.0.0-beta.6",
     "zone.js": "0.6.12"
   },
   "devDependencies": {
