Integração com MBaaS - Firebase
- Integração com AngurarFire2 e Firebase 3
- Implementação de providers de controle de acesso (CustomAccount,
Anonymous, Facebook, Twitter, Github, Googe)

--- a/desenvolvimento/hibrido/package.json
+++ b/desenvolvimento/hibrido/package.json
@@ -14,6 +14,8 @@
     "@angular/platform-browser": "^2.0.0-rc.3",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.3",
     "@angular/router": "^2.0.0-rc.2",
+    "angularfire2": "^2.0.0-beta.2",
+    "firebase": "^3.0.5",
     "es6-shim": "0.35.0",
     "ionic-angular": "^2.0.0-beta.10",
     "ionic-native": "^1.1.0",
