--- a/desenvolvimento/hibrido/tsconfig.json
+++ b/desenvolvimento/hibrido/tsconfig.json
@@ -5,6 +5,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
+  "files": [
+    "node_modules/angularfire2/firebase3.d.ts"
+  ],
   "filesGlob": [
     "**/*.ts",
     "!node_modules/**/*"
