Upgrade para angular 2.0.0rc.4

--- a/desenvolvimento/hibrido/tsconfig.json
+++ b/desenvolvimento/hibrido/tsconfig.json
@@ -5,12 +5,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
-  "files": [
-    "node_modules/angularfire2/firebase3.d.ts"
-  ],
   "filesGlob": [
     "**/*.ts",
-    "!node_modules/**/*"
+    "!node_modules/**/*",
+    "node_modules/angularfire2/firebase3.d.ts"
   ],
   "exclude": [
     "node_modules",
