--- a/desenvolvimento/hibrido/www/manifest.json
+++ b/desenvolvimento/hibrido/www/manifest.json
@@ -8,6 +8,6 @@
     "sizes": "512x512",
     "type": "image/png"
   }],
-  "background_color": "#f5f5f5",
-  "theme_color": "#3f51b5"
+  "background_color": "#3F51B5",
+  "theme_color": "#3F51B5"
 }
