--- a/desenvolvimento/hibrido/package.json
+++ b/desenvolvimento/hibrido/package.json
@@ -15,7 +15,7 @@
     "@angular/platform-browser": "2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "^2.0.0-rc.2",
-    "angularfire2": "^2.0.0-beta.2",
+    "angularfire2": "2.0.0-beta.2",
     "es6-shim": "0.35.0",
     "firebase": "^3.3.0",
     "ionic-angular": "2.0.0-beta.11",
