--- a/desenvolvimento/hibrido/package.json
+++ b/desenvolvimento/hibrido/package.json
@@ -22,7 +22,6 @@
     "ionic-native": "^1.3.10",
     "ionicons": "3.0.0",
     "lodash": "^4.15.0",
-    "moment": "^2.14.1",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "0.6.12"
@@ -32,7 +31,7 @@
     "gulp": "3.9.1",
     "gulp-tslint": "^5.0.0",
     "gulp-watch": "4.3.5",
-    "ionic-gulp-browserify-typescript": "^1.1.0",
+    "ionic-gulp-browserify-typescript": "^2.0.0",
     "ionic-gulp-fonts-copy": "^1.0.0",
     "ionic-gulp-html-copy": "^1.0.0",
     "ionic-gulp-sass-build": "^1.0.0",
@@ -40,7 +39,7 @@
     "ionic-gulp-tslint": "^1.0.0",
     "run-sequence": "1.1.5",
     "tslint": "^3.10.1",
-    "tslint-ionic-rules": "^0.0.3"
+    "tslint-ionic-rules": "0.0.5"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
